# parser

./: .env  .gitignore  alembic.ini  docker-compose.yaml  migrations.sh  pyproject.toml  run.sh
app/src/: config.py  ioc.py  main.py
app/src/application/: dto.py  interactors.py  interfaces.py
app/src/controllers/: ampq.py  http.py  schemas.py
app/src/domain/: entities.py
app/src/infrastructure/: database.py  extractor_gateway.py  gateways.py  models.py  requests_sessions.py  types.py
app/src/infrastructure/migrations/: env.py
app/src/infrastructure/migrations/versions/: da8671f6ec51_initial_migration.py
