[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["ArtemZhdanovich <artem.zhdanboro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.12"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
dishka = "^1.4.2"
lxml = "^5.3.1"
beautifulsoup4 = "^4.13.3"
transliterate = "^1.10.2"
alembic = "^1.14.1"
psycopg = "^3.2.5"
uvicorn = "^0.34.0"
faststream = "^0.5.34"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
